--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,3 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!-- Material colors -->
+    <color name="primary">@color/blue_whale</color>
+    <color name="onPrimary">@color/white</color>
+    <color name="secondary">@color/amber</color>
+    <color name="onSecondary">@color/white</color>
+    <color name="tertiary">@color/anakiwa</color>
+    <color name="onTertiary">@color/white</color>
+    <color name="background">@color/white</color>
+    <color name="onBackground">@color/black</color>
+
 </resources>
