--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="blue_whale">#04244B</color>
+    <color name="amber">#FFC000</color>
+    <color name="anakiwa">#97CDFF</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="red_200">#FFD63D2E</color>
+    <color name="black">#FF000000</color>
+    <color name="bright_red">#AA0000</color>
+    <color name="genoa">#17895B</color>
+    <color name="alto">#D9D9D9</color>
 
+    <color name="xmas_green">#004d00</color>
+    <color name="xmas_red">#E21B1B</color>
+    <color name="xmas_gold">#FFD807</color>
 
+    <!-- Business colors -->
+    <color name="success">#17895B</color>
+    <color name="failure">#AA0000</color>
 
     <!-- Material colors -->
     <color name="primary"/>
@@ -19,7 +25,7 @@
     <color name="tertiary"/>"/>
     <color name="onTertiary"/>
     <color name="background"/>
-    <color name="onBackround"/>
-    <color name="error">@color/red_200</color>
+    <color name="onBackground"/>
+    <color name="error">@color/bright_red</color>
 
 </resources>
